--- a/works/index.html
+++ b/works/index.html
@@ -34,6 +34,8 @@
 
 <body>
 
+    <div class="backgroud"></div>
+
     <div id="pagebody">
         <div id="header">
             <table width="850" border="0" cellspacing="2">
@@ -48,7 +50,7 @@
                         </td>
                         <td width="300" align="right" valign="top">
 
-                            <a href="#contact">
+                            <a href="http://www.anime.or.jp">
                                 <img src="../assets/homepage/contact.png" width="200" height="100" alt="联系我们" hspace="8">
                             </a>
                         </td>
