--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 </head>
 
 <body>
-
+  <div class="backgroud"></div>
   <div id="pagebody">
     <div id="header">
       <!-- ▼标题 -->
@@ -94,7 +94,7 @@
             </td>
             <td width="300" align="right" valign="top">
 
-              <a href="#footer">
+              <a href="http://www.anime.or.jp">
                 <img src="./assets/homepage/contact.png" width="200" height="100" alt="联系我们" hspace="8">
               </a>
             </td>
