--- a/katudou/index.html
+++ b/katudou/index.html
@@ -43,6 +43,7 @@
 </head>
 
 <body>
+    <div class="backgroud"></div>
 
     <div id="pagebody">
         <div id="header">
@@ -60,7 +61,7 @@
                         </td>
                         <td width="300" align="right" valign="top">
 
-                            <a href="#contact">
+                            <a href="http://www.anime.or.jp">
                                 <img src="../assets/homepage/contact.png" width="200" height="100" alt="联系我们" hspace="8">
                             </a>
                         </td>
