--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <td width="540" height="103" align="left" valign="top">
               <div class="ekuralogo">
                 <a href="./index.html">
-                  <img src="./assets/homepage/WechatIMG355.png" width="130" height="130" alt="左灜">
+                  <img src="./assets/homepage/WechatIMG104.png" width="130" height="130" alt="左灜">
                 </a>
               </div>
             </td>
@@ -171,7 +171,7 @@
             <br>
             <hr>
             <br>
-            <img width="540" data-magnify="gallery" data-src="./assets/works/36b95ab0-ff0f-4bb3-ba81-84171d916919.png" src="./assets/works/36b95ab0-ff0f-4bb3-ba81-84171d916919.png" alt=""/>
+            <img width="540" data-magnify="gallery" data-src="./assets/works/36b95ab0-ff0f-4bb3-ba81-84171d916919.jpeg" src="./assets/works/36b95ab0-ff0f-4bb3-ba81-84171d916919.png" alt=""/>
             <br>
             <hr>
             <br>
