--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
           <!-- 右侧 -->
 
-          <td width="250" align="center" valign="top">
+          <td width="240" align="center" valign="top">
 
             <!--<p>-->
               <!--<iframe style="margin-top: 15px;" src="/map.html" frameBorder=0 height=340 width=240 scrolling=no></iframe>-->
@@ -189,6 +189,18 @@
               <!--<a href="http://map.baidu.com/?newmap=1&ie=utf-8&s=s%26wd%3D%E5%A4%A9%E6%B4%A5%E5%B8%82%E8%87%AA%E8%B4%B8%E8%AF%95%E9%AA%8C%E5%8C%BA%E7%86%99%E5%85%83%E5%B9%BF%E5%9C%BA1-2012" target="="_blank>查看地图</a>-->
               <!--<br>-->
             <!--</p>-->
+            <div class="wgtTop">
+              <div class="userPt">
+                <a href="http://weibo.com/u/6643126199" target="_blank">
+                  <img src="http://tvax2.sinaimg.cn/crop.20.0.1200.1200.50/007fzSALly8fucugx31urj30yg0xcn7v.jpg" alt="左瀛动漫设计有限公司">
+                </a>
+              </div>
+              <div class="userInfo">
+                <div class="userNm txt_b">左瀛动漫设计有限公司</div>
+              </div>
+              <div class="clearit"></div>
+            
+              </div>
             <iframe id="weibo" style="width:240px; height:500px;border: 1px #ccc solid;margin-top: 18px;"   frameborder="0" scrolling="no" src="http://v.t.sina.com.cn/widget/widget_blog.php?uid=6643126199"></iframe>
             <div style="margin-bottom: 8px; background-color: #fff; box-shadow: 0 2px 4px 0 rgba(0,0,0,0.05);">
                 <h3 style=" font-size: 12px; color: #3d3d3d; background: #f5f5f5; padding: 0 16px; height: 38px; line-height: 38px;">热门文章</h3>
