--- a/works/illu.html
+++ b/works/illu.html
@@ -3,38 +3,55 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>公司介绍</title>
+    <title>作品简介</title>
 
-    <link href="../theme/info.css" rel="stylesheet" type="text/css">
-    <script src="./src/jquery.min.js"></script>
+    <link href="../theme/caiyong.css" rel="stylesheet" type="text/css">
+    <link href="../theme/works.css" rel="stylesheet" type="text/css">
+    <link href="../theme/jquery.magnify.css" rel="stylesheet">
+  <link href="https://cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="../src/jquery.min.js"></script>
+    <script type="text/javascript" src="../src/jquery.magnify.min.js"></script>
+            <link href="../theme/select.css" rel="stylesheet" type="text/css">
+    <script src="../src/select.js"></script>
     <script>
+        $(function(){
         var host = 'http://39.106.187.16:8000'
-       $(function() {
-           $.ajax({url: host + '/api/production', success: function(res) {
-               if (res.statusNo === 1) {
-                    var html = ''
-                   for (var i = 0; i < res.data.length; i++) {
-                       var v = res.data[i]
-                       html += '<li style="cursor: pointer"><a>' + v.title + '</a></li>'
-                       if (i === 0 ) {
-                           $('#content').html(v.content)
-                       }
-                   }
-                    $('#sidemenu ul').html(html);
-                    $('#sidemenu ul li').each(function(k, v) {
-                        $(this).on('click', function() {
-                            $('#content').html(res.data[k].content)
-                        })
-                    })
-               }
-           }})
-       })
+            $.ajax({
+        url: host + '/api/inset ', success: function (res) {
+          if (res.statusNo === 1) {
+            var html = html2 = ''
+            for (var i = 0; i < res.data.length; i++) {
+              var v = res.data[i]
+              html += '<li class="item">' +
+                '<a href="#">' +
+                '<img data-original="' + host + v.image + '" style="border-radius: 25px;" 　alt="' + v.title + '">' +
+                '</a>' +
+                '</li>'
+              html2 += '<li class="item--big">' +
+                    '<a href="#">' +
+                    '<figure>' +
+                        '<img  data-magnify="gallery"' + 'data-src="' + host + v.image + '"' + 'data-original="' + host + v.image + '" alt="" />' +
+                    '</figure>' +
+                    '</a>' +
+               '</li>'
+            }
+            $('#gallery-container .items--small').html(html)
+            $('#gallery-container .items--big').html(html2)
+            $('#gallery-container').sGallery({
+                fullScreenEnabled: true
+            });
+            $("[data-magnify=gallery]").magnify(
+
+            )
+            $("[data-original]").lazyload()
+          }
+        }
+      })
+        })
     </script>
 </head>
 
 <body>
-
-    <div class="backgroud"></div>
 
     <div id="pagebody">
         <div id="header">
@@ -44,13 +61,12 @@
                         <td width="540" height="103" align="left" valign="top">
                             <div class="ekuralogo">
                                 <a href="../index.html">
-                                    <img src="./assets/homepage/WechatIMG105.png" width="130" height="130" alt="アニメ制作会社エクラアニマル">
+                                  <img src="../assets/homepage/WechatIMG105.png" width="130" height="130" alt="アニメ制作会社エクラアニマル">
                                 </a>
                             </div>
                         </td>
                         <td width="300" align="right" valign="top">
-
-                            <a href="http://www.anime.or.jp">
+                            <a href="#contact">
                                 <img src="../assets/homepage/contact.png" width="200" height="100" alt="联系我们" hspace="8">
                             </a>
                         </td>
@@ -85,11 +101,17 @@
                 </a>
 
                 <!-- tab4 -->
-                <a href="../works.html">
+                <a class="works" href="javascript:void(0)">
                 <div style="width: 118px; height: 26px;display: inline-block;">
                     <span style="font-size: 23px;font-weight: 600;">作品简介</span>
                 </div>
                 </a>
+                <div id="box" class="hidden-box hidden-loc-us">
+                    <ul>
+                        <a href="../works/illu.html"><li>插画</li></a>
+                        <a href="../works/anime.html"><li>动画</li></a>
+                    </ul>
+                </div>
 
                 <!-- tab4 -->
                 <a href="../saiyou.html">
@@ -99,38 +121,12 @@
                 </a>
             </center>
         </div>
-
-
-        <!-- メニューend -->
-
-        <table width="850" border="0" cellspacing="40">
-            <tbody>
-                <tr>
-                    <td valign="top" width="200" height="138">
-
-
-                        <!-- ▼▼ページ内容 -->
-
-
-                        <!-- ▼サイドメニュー -->
-
-                        <div id="sidemenu">
-                            <ul>
-                            </ul>
-                        </div>
-
-
-                        <!-- サイドメニューend -->
-
-
-                    </td>
-                    <td align="left" valign="top">
-                        <div id="content">
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <div id="gallery-container">
+            <ul class="items--small">
+            </ul>
+            <ul class="items--big">
+            </ul>
+        </div>
 
     </div>
     <!-- #EndLibraryItem -->
@@ -140,7 +136,7 @@
         <div class="foot foot_dark">
           <div class="foot_cpright">
             <div class="foot_lefts">
-              <img class="foot_logo" width="120" src="./assets/homepage/WechatIMG355.png" alt="左瀛动漫">
+              <img class="foot_logo" width="120" src="../assets/homepage/WechatIMG355.png" alt="左瀛动漫">
               <span class="foot_text">左瀛动漫</span>
             </div>
             <ul class="foot_links">
@@ -159,7 +155,6 @@
                 <span class="f_line">|</span>
                 <a target="_blank" href="#">zuozuo0101@gmail.com(日本)</a></li>
             </ul>
-            <img class="foot_right" width="100" src="./assets/homepage/二维码.jpg">
           </div>
         </div>
       </div>
@@ -168,5 +163,6 @@
 
     <audio controls="controls" style="display: none;"></audio>
 </body>
-
+<script src="../src/works.js"></script>
+<script src="../src/lazyload.min.js"></script>
 </html>
