--- a/katudou/index.html
+++ b/katudou/index.html
@@ -58,6 +58,7 @@
                             <div class="ekuralogo">
                                 <a href="../index.html">
                                     <img src="./assets/homepage/WechatIMG105.png" width="130" height="130" alt="アニメ制作会社エクラアニマル">
+                  <img width="130" src="./assets/homepage/563593290530750059.png" alt="左瀛动漫">
                                 </a>
                             </div>
                         </td>
@@ -156,7 +157,7 @@
           <div class="foot_cpright">
             <div class="foot_lefts">
               <img class="foot_logo" width="120" src="./assets/homepage/WechatIMG355.png" alt="左瀛动漫">
-              <span class="foot_text">左瀛动漫</span>
+            <img class="foot_logo" width="120" src="./assets/homepage/563593290530750059.png" alt="左瀛动漫">
             </div>
             <ul class="foot_links">
               <li class="copyright_zh">
