--- a/works/anime.html
+++ b/works/anime.html
@@ -14,6 +14,8 @@
   <script type="text/javascript" src="../src/jquery.magnify.min.js"></script>
       <link href="../theme/select.css" rel="stylesheet" type="text/css">
     <script src="../src/select.js"></script>
+    <link href="../theme/caiyong.css" rel="stylesheet" type="text/css">
+    <link href="../theme/works.css" rel="stylesheet" type="text/css">
   <script>
     var host = 'http://39.106.187.16:8000';
 
@@ -27,20 +29,18 @@ $(
             for (var i = 0; i < res.data.length; i++) {
               var v = res.data[i]
               html += '<li class="item">' +
-                '<a href="#">' +
-                '<img data-original="' + host + v.image + '" style="border-radius: 25px;" 　alt="' + v.title + '">' +
-                '</a>' +
+                '<img data-magnify="gallery" data-src="' + host + v.image + '" data-original="' + host + v.image + '" style="border-radius: 25px;" 　alt="' + v.title + '">' +
                 '</li>'
-              html2 += '<li class="item--big">' +
-                    '<a href="#">' +
-                    '<figure>' +
-                        '<img  data-magnify="gallery"' + 'data-src="' + host + v.image + '"' + 'data-original="' + host + v.image + '" alt="" />' +
-                    '</figure>' +
-                    '</a>' +
-               '</li>'
+              // html2 += '<li class="item--big">' +
+              //       '<a href="#">' +
+              //       '<figure>' +
+              //           '<img  data-magnify="gallery"' + 'data-src="' + host + v.image + '"' + 'data-original="' + host + v.image + '" alt="" />' +
+              //       '</figure>' +
+              //       '</a>' +
+              //  '</li>'
             }
             $('#gallery-container .items--small').html(html)
-            $('#gallery-container .items--big').html(html2)
+            // $('#gallery-container .items--big').html(html2)
             $('#gallery-container').sGallery({
                 fullScreenEnabled: true
             });
@@ -83,9 +83,6 @@ $(
 )
       
   </script>
-
-    <link href="../theme/caiyong.css" rel="stylesheet" type="text/css">
-    <link href="../theme/works.css" rel="stylesheet" type="text/css">
   <meta name="google-site-verification" content="0oMsL0u4yA5lCbjR9j9zo47uOMxPMF1XHKs-toT84TA">
 
 </head>
@@ -103,6 +100,7 @@ $(
               <div class="ekuralogo">
                 <a href="../index.html">
                   <img src="../assets/homepage/WechatIMG105.png" width="130" height="130" alt="左灜">
+                  <img width="130" src="../assets/homepage/563593290530750059.png" alt="左瀛动漫">
                 </a>
               </div>
             </td>
@@ -211,7 +209,7 @@ $(
         <div class="foot_cpright">
           <div class="foot_lefts">
             <img class="foot_logo" width="120" src="../assets/homepage/WechatIMG355.png" alt="左瀛动漫">
-            <span class="foot_text">左瀛动漫</span>
+            <img class="foot_logo" width="120" src="../assets/homepage/563593290530750059.png" alt="左瀛动漫">
           </div>
           <ul class="foot_links">
             <li class="copyright_zh">
