:sparkles: add a in homepage

--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
   <script src="./src/jquery.min.js"></script>
   <script type="text/javascript" src="./src/responsiveslides.min.js"></script>
-  <script type="text/javascript" src="./src/jquery.magnify.min.js"></script>
       <link href="../theme/select.css" rel="stylesheet" type="text/css">
     <script src="./src/select.js"></script>
   <script>
@@ -179,11 +178,15 @@
             <br>
             <hr>
             <br>
-            <img width="540" data-magnify="gallery" data-src="./assets/works/36b95ab0-ff0f-4bb3-ba81-84171d916919.jpeg" src="./assets/works/36b95ab0-ff0f-4bb3-ba81-84171d916919.png" alt=""/>
+            <a href="./works/anime.html">
+              <img width="540" src="./assets/works/36b95ab0-ff0f-4bb3-ba81-84171d916919.png" alt=""/>
+            </a>
             <br>
             <hr>
             <br>
-            <img width="540" data-magnify="gallery" data-src="./assets/works/2.jpg" src="./assets/works/2.jpg" alt=""/>
+            <a href="./works/illu.html">
+              <img width="540"  src="./assets/works/2.jpg" alt=""/>
+            </a>
           </td>
 
 
