--- a/index.html
+++ b/index.html
@@ -178,12 +178,14 @@
             <br>
             <hr>
             <br>
+            <h3 style="color: #6787b0;font-size: 23px;">动画作品</h3>
             <a href="./works/anime.html">
               <img width="540" src="./assets/works/36b95ab0-ff0f-4bb3-ba81-84171d916919.png" alt=""/>
             </a>
             <br>
             <hr>
             <br>
+            <h3 style="color: #6787b0;font-size: 23px;">插画作品</h3>
             <a href="./works/illu.html">
               <img width="540"  src="./assets/works/2.jpg" alt=""/>
             </a>
