--- a/works/illu.html
+++ b/works/illu.html
@@ -17,14 +17,14 @@
         $(function(){
         var host = 'http://39.106.187.16:8000'
             $.ajax({
-        url: host + '/api/inset ', success: function (res) {
+        url: host + '/api/web/inset ', success: function (res) {
           if (res.statusNo === 1) {
             var html = html2 = ''
             for (var i = 0; i < res.data.length; i++) {
               var v = res.data[i]
               html += '<li class="item">' +
                 '<a href="#">' +
-                '<img data-magnify="gallery" data-src="' + host + v.image + '" data-original="' + host + v.image + '" style="border-radius: 25px;" 　alt="' + v.title + '">' +
+                '<img data-magnify="gallery" data-src="' + host + (v.image || v.breviary) + '" src="' + host + (v.breviary || v.image) + '" style="border-radius: 25px;" 　alt="' + v.title + '">' +
                 '</a>' +
                 '</li>'
             //   html2 += '<li class="item--big">' +
@@ -43,7 +43,6 @@
             $("[data-magnify=gallery]").magnify(
 
             )
-            $("[data-original]").lazyload()
           }
         }
       })
@@ -62,7 +61,7 @@
                             <div class="ekuralogo">
                                 <a href="../index.html">
                                   <img src="../assets/homepage/WechatIMG105.png" width="130" height="130" alt="アニメ制作会社エクラアニマル">
-                  <img width="150" src="../assets/homepage/563593290530750059.png" alt="左瀛动漫">
+                  <img width="200" src="../assets/homepage/563593290530750059.png" style="margin-bottom: -30px;" alt="左瀛动漫">
                                 </a>
                             </div>
                         </td>
@@ -165,5 +164,4 @@
     <audio controls="controls" style="display: none;"></audio>
 </body>
 <script src="../src/works.js"></script>
-<script src="../src/lazyload.min.js"></script>
 </html>
