--- a/katudou/index.html
+++ b/katudou/index.html
@@ -18,7 +18,7 @@
     <script>
         var host = 'http://39.106.187.16:8000'
        $(function() {
-           $.ajax({url: host + '/api/activity', success: function(res) {
+           $.ajax({url: host + '/api/web/activity', success: function(res) {
                if (res.statusNo === 1) {
                    var html = ''
                    for (var i = 0; i < res.data.length; i++) {
@@ -58,7 +58,7 @@
                             <div class="ekuralogo">
                                 <a href="../index.html">
                                     <img src="./assets/homepage/WechatIMG105.png" width="130" height="130" alt="アニメ制作会社エクラアニマル">
-                  <img width="150" src="./assets/homepage/563593290530750059.png" alt="左瀛动漫">
+                  <img width="200" src="./assets/homepage/563593290530750059.png" style="margin-bottom: -30px;" alt="左瀛动漫">
                                 </a>
                             </div>
                         </td>
@@ -171,7 +171,7 @@
               <li class="copyright_public">
                 <span class="span_line">传真：81-0424615301(日本)</span>
                 <span class="f_line">|</span>
-                <span class="span_line">邮箱：zuozuo_0101@126.com(中国)</span>
+                <span class="span_line">邮箱：zowin2018@163.com(中国)</span>
                 <span class="f_line">|</span>
                 <a target="_blank" href="#">zuozuo0101@gmail.com(日本)</a></li>
             </ul>
