:bug: fix css bug

--- a/works/illu.html
+++ b/works/illu.html
@@ -67,7 +67,7 @@
                         </td>
                         <td width="300" align="right" valign="top">
                             <a href="#contact">
-                                <img src="../assets/homepage/contact.png" width="200" height="100" alt="联系我们" hspace="8">
+                                <img src="../assets/homepage/contact.png" width="150" alt="联系我们" hspace="8">
                             </a>
                         </td>
                     </tr>
