--- a/saiyou/index.html
+++ b/saiyou/index.html
@@ -57,7 +57,7 @@
                         </td>
                         <td width="300" align="right" valign="top">
                             <a href="http://www.anime.or.jp">
-                                <img src="../assets/homepage/contact.png" width="200" height="100" alt="联系我们" hspace="8">
+                                <img src="../assets/homepage/contact.png" width="150" alt="联系我们" hspace="8">
                             </a>
                         </td>
                     </tr>
