--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <hr>
             <a href="./works/anime.html">
               <h3 style="color: #6787b0;font-size: 23px;margin-top:7px;">动画作品</h3>
-              <img width="540" height="369" src="./assets/works/36b95ab0-ff0f-4bb3-ba81-84171d916919.png" alt=""/>
+              <img width="540" height="369" src="./assets/works/1.jpeg" alt=""/>
             </a>
             <br>
             <hr>
