--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
             <li class="copyright_public">
               <span class="span_line">传真：81-0424615301(日本)</span>
               <span class="f_line">|</span>
-              <span class="span_line">邮箱：zuozuo_0101@126.com(中国)</span>
+              <span class="span_line">邮箱：zuowin2018@163.com(中国)</span>
               <span class="f_line">|</span>
               <a target="_blank" href="#">zuozuo0101@gmail.com(日本)</a></li>
           </ul>
