--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script type="text/javascript" src="./src/responsiveslides.min.js"></script>
     <script src="./src/select.js"></script>
   <script>
-    var host = 'http://localhost:8000'
+    var host = 'http://39.106.187.16:8000'
     $(function () {
       $.ajax({
         url: host + '/api/web/sowing', success: function (res) {
